# MUTS

./: .env.example  .eslintignore  .gitignore  ARCHITECTURE.md  BUILD_FAILURE_REPORT.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_LIST.md  CONTRIBUTING.md  COVERAGE_PLAN.md  COVERAGE_PROGRESS.md  COVERAGE_STATUS.md  COVERAGE_SUMMARY.md  COVERAGE_UPDATE.md  DEBUG_REPORT.md  ECU_PROTOCOLS.md  EEPROMExploiter.py  FINAL_COVERAGE_REPORT.md  FINAL_PROGRESS_SUMMARY.md  INSTALL.md  KNOWN_CRITICAL_ISSUES.md  LICENSE  MAPS_REFERENCE.md  MILESTONE_65_PERCENT.md  MUTS_CROSS_FILE_ANALYSIS.md  Makefile  MazdaCANEngine.py  MazdaSecurityCore.py  MazdaSpeed3TuningSoftware.py  MazdaTunerAPI.py  PROGRESS_66_PERCENT.md  PROGRESS_67_PERCENT.md  README.md  RacingFeatureController.py  RealTimeAITuner.py  RealTimeTelemetry.py  SAFETY_MODEL.md  SECURITY.md  SRSAirbagExploiter.py  (+105 more)
.ai/blueprints/: tasks.yaml
.ai/prompts/: coding-standard.md
.augment/rules/: muts.md  rules.md
.cursor/: tasks.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  improvement.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  docker-build.yml  enterprise-ci.yml  lint.yml  test.yml
analysis_artifacts/: ads_features.json  audit_summary.json  cobb_features.json  collision_report.json  component_map.json  enumerate_files.py  executive_summary.md  file_manifest.json  forensic_audit.py  gap_risk_analysis.json  generate_synthesis.py  master_feature_registry.json  mds_features.json  mpsrom_features.json  muts_features.json  other_features.json  per_file_analysis.jsonl  progress.json  versa_features.json
app/: __init__.py  config.py  master_tuner.py
app/api/: __init__.py  main.py
app/cobb/: main.py
app/config/: ai_config.py
app/database/: __init__.py  ecu_database.py
app/mds/: __init__.py
app/models/: __init__.py  engine_models.py  turbo_models.py
app/mps/: __init__.py
app/services/: __init__.py
app/tests/: __init__.py  test_diagnostics_capabilities.py  test_suite.py  test_vehicle_integration.py
app/utils/: __init__.py  calculations.py  security.py
archive/original_sources/: add10.py  add13.py  add14.py  add17.py  add19.py  add2.py  add20.py  add23.py  add24.py  add3.py  add4.py  add5.py  cobb1.py  cobb11.py  (+32 more)
backend/: .env.example  .env.gpg  README.md  REORGANIZATION_SUMMARY.md  __init__.py  package-lock.json  package.json  tsconfig.json  validate_imports.py
build_artifacts/: backend_gate_verification.py  drift_detection.py  feature_gap_analysis.py  ingest_analysis.py  installer_build_report.md  release_manifest.json  route_category_mapping.py  traceability_mapper.py  update_normalized_features.py
comms/: iso15765_transport.py  j2534_api.py  j2534_device.py  j2534_manager.py  kwp2000_protocol.py  mazda_ecu.py  uds_protocol.py
config/: defaults.yml  j2534_devices.yml  logging.yml  maps_mps3_gen2.yml  safety_limits.yml
core/: app_state.py  checksum.py  connection_monitor.py  data_manager.py  ecu_communication.py  factory_maps.py  limit_finder.py  logging_manager.py  rom_verifier.py  safety_limits.py  safety_validator.py  versa_tuning_core.py
database/: session.py
diagnostics/: abs_module.py  bcm_module.py  dtc_manager.py  freeze_frame.py  live_data.py  live_data_service.py  srs_module.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ECU_PROTOCOLS.md  FIRST_RUN.md  IMPLEMENTATION_FLOWS.md  MAPS_REFERENCE.md  PRODUCT_SPEC.md  ROADMAP.md  SAFETY_MODEL.md  SECURITY.md  index.md  vehicle_integration_guide.md
electron-app/: README.md  admin_override_panel.html  api-service.js  diagnostics_capability_panel.html  dry_run_panel.html  index.html  launch.sh  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css  test-app.js  test-visual.js  test.js  theme.css  vehicle_selector.html  vehicle_selector.js
gui/: main_window.py
installers/: build_linux.sh  build_macos.sh  build_windows.bat
mazda_diag/: __init__.py
mazdaspeed3_tuning/: __init__.py
muts/: __init__.py
muts-desktop/: README.md  install.sh
muts-desktop/rust-core/: Cargo.toml  package.json
muts-desktop/rust-core/src/: diagnostics.rs  event_bus.rs  flash.rs  flash_supervisor.rs  hardware.rs  lib.rs  safety.rs  streaming.rs  types.rs
muts-ui/: electron-main.js  globals.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
muts_architecture_diagram/: ARCHITECTURE_DIAGRAM.txt
muts_technical_spec (2)/: README.md
muts_tuner/: j2534_interface.py  requirements.txt
oracle-cloud-setup/: .gitignore  README.md  deploy-a1-flex-retry.sh  deploy-oracle-server.sh  remote-setup.sh
rust/: Cargo.toml  build.sh
rust/src/: lib.rs
scripts/: bump-version.js  deploy_to_github.py  verify_phase2_dyno.py
security/: anti_theft.py  roles.py  user_auth.py  valet_mode.py
simulators/: dyno_sim.py  virtual_ecu.py
tests/: test_ai_tuner.py  test_app_state.py  test_calculations.py  test_comms.py  test_connection_monitor.py  test_dealer_service.py  test_diagnostics.py  test_ecu_communication.py  test_engine_models.py  test_live_data_service.py  test_main.py  test_performance_features.py  test_physics_engine.py  test_queue.py  test_rom_verifier.py  test_safety_validator.py  test_security.py  test_seed_key.py  test_services_queue.py  test_tuning.py  test_turbo_models.py  test_ui_smoke.py  test_versa_tuning_core.py
tools/: export_tune_to_csv.py  generate_dummy_logs.py  import_stock_rom.py
tuning/: boost_control.py  fueling_control.py  ignition_control.py  load_targeting.py  map_editor.py  models.py  performance_features.py  rom_manager.py  swas_manager.py  torque_manager.py  tune_profile_manager.py
ui/: main_window.py  style.py
utils/: logger.py
watchdog/: self_check.js  self_check.ts
(+459 files in other folders)
