[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muts"
version = "1.0.0"
description = "Mazda Universal Tuning Suite - Complete autonomous tuning system for Mazdaspeed 3"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Automotive",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=1.12.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "SQLAlchemy>=1.4.0",
    "python-can>=4.0.0",
    "cryptography>=3.4.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "PyYAML>=6.0",
    "colorama>=0.4.4",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.15.0",
    "accelerate>=0.10.0",
]
gui = [
    "PyQt5>=5.15.0",
]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]

[project.scripts]
muts = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/muts"
Documentation = "https://muts.readthedocs.io/"
Repository = "https://github.com/yourusername/muts.git"
Issues = "https://github.com/yourusername/muts/issues"
Changelog = "https://github.com/yourusername/muts/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["muts*"]

[tool.setuptools.package-data]
"muts" = ["config/*.yml", "database/*.db"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "can.*",
    "torch.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=muts --cov-report=html --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["muts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "muts/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
