[package]
name = "muts-versa-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "muts_versa_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc = "3.0"
byteorder = "1.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
