[package]
name = "muts-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# N-API for Node.js bindings
napi = { version = "2.0", default-features = false, features = ["napi4"] }
napi-derive = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CAN interfaces (platform-specific)
socketcan = { version = "3.0", optional = true }
j2534 = { version = "0.1", optional = true }

# Diagnostics
iso-tp = { version = "0.1", optional = true }
uds = { version = "0.1", optional = true }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Security
ring = "0.16"
hmac = "0.12"
sha2 = "0.10"

# Flash operations
crc = "3.0"

[build-dependencies]
napi-build = "1.0"

[features]
default = ["linux"]
linux = ["socketcan", "iso-tp", "uds", "tracing-subscriber"]
windows = ["j2534", "iso-tp", "uds", "tracing-subscriber"]
macos = ["iso-tp", "uds", "tracing-subscriber"]
mock = ["tracing-subscriber"]

[profile.release]
lto = true
